# FRONT-LINE-TRUTH-PIPELINE-Built-on-Stellar

./: README.md
.github/workflows/: deploy.yml
contracts/compliance_registry/: Cargo.toml
contracts/compliance_registry/src/: lib.rs
contracts/compliance_registry/tests/: compliance_registry.rs
contracts/court_approval/: Cargo.toml
contracts/court_approval/src/: lib.rs
contracts/court_approval/test_snapshots/: test_shipment_approval.1.json
contracts/court_approval/test_snapshots/tests/: test_approve_compliant_shipment.1.json  test_is_approved_default_false.1.json  test_pending_shipment_blocked.1.json  test_rejected_shipment_blocked.1.json
contracts/evidence_registry/: Cargo.toml
contracts/evidence_registry/src/: lib.rs
contracts/evidence_registry/test_snapshots/tests/: test_deduplicated_list.1.json  test_reject_shipment.1.json  test_submit_and_list.1.json  test_verify_all_present.1.json  test_verify_missing_field_rejects.1.json
contracts/shipment_approval/: Cargo.toml
contracts/shipment_approval/src/: lib.rs
contracts/shipment_approval/tests/: shipment_approval.rs
frontend/: .gitignore  jest.config.js  netlify.toml  package-lock.json  package.json
frontend/.github/workflows/: deploy.yml
frontend/__mocks__/: fileMock.js
frontend/app/: CaseRegistry.tsx  ConnectWalletButton.tsx  CourtIntake.tsx  FieldCaptureForm.tsx  StellarMark.tsx  ToastProvider.tsx  TransactionHistory.tsx  VerificationDesk.tsx  config.ts  freighter-context.tsx  frontline-pipeline.test.tsx  globals.css  layout.tsx  page.tsx  stellar.ts
